@@ -4,14 +4,12 @@
 		<li>pgDatatype to encapsulate all typmod handling, rewrite all other classes to use it
 		<li>Use latest wxWindows snapshot when wxChmHelpController for gtk is included
 		<li>Improve database connection docs for newbies.
-		<li>Handle unexpected server disconnection cleanly.
 	</ul>
 
 	<li>Enhancements
 	<ul>
 		<li>Display server log
 		<li>Keyboard navigation (wx issue)
-		<li>function property: show line number
 		<li>EditGrid: refresh row after insert to show default values
 		<li>columns of Views: show properties
 		<li>Most property dlgs: check for readOnly if no sufficient rights are available
