@@ -123,6 +123,8 @@ private:
     void OnDisconnect(wxCommandEvent &ev);
     void OnQueryBuilder(wxCommandEvent &ev);
 
+    void OnCheckAlive(wxCommandEvent& event);
+
     void execSelChange(wxTreeItemId item, bool currentNode);
     void setDisplay(pgObject *data, ctlListView *props=0, ctlSQLBox *sqlbox=0);
     void StoreServers();
