@@ -16,6 +16,9 @@ The following list contains all changes to pgAdmin3, as present in cvs.
 </ul>
 <br>
 <ul>
+    <li>2004-05-28 AP        handle lost connections safely
+    <li>2004-05-28 AP        fix server status not cleaning old connections
+    <li>2004-05-28 AP        line numbers in function definition property dialog
     <li>2004-05-26 AP        warn when deleting superuser privilege
     <li>2004-05-10 DP        Generate function SQL correctly when the return type needs a schema specification
     <li>2004-05-04 DP        Prevent duplication of functional indexes
